[gd_scene load_steps=16 format=2]

[ext_resource path="res://characters/bosses/base/boss_base.gd" type="Script" id=1]
[ext_resource path="res://characters/bosses/thunder_man/sprites/ThunderManIdle.png" type="Texture" id=2]
[ext_resource path="res://characters/bosses/thunder_man/sprites/ThunderManDash.png" type="Texture" id=3]
[ext_resource path="res://characters/player/sprites/mega_man/Hit.png" type="Texture" id=4]
[ext_resource path="res://characters/enemies/base/sounds/Hit.wav" type="AudioStream" id=5]
[ext_resource path="res://characters/player/sounds/Died.wav" type="AudioStream" id=6]
[ext_resource path="res://characters/bosses/base/scripts/boss_state_machine.gd" type="Script" id=7]
[ext_resource path="res://characters/bosses/base/states/death.gd" type="Script" id=8]
[ext_resource path="res://characters/bosses/base/states/ready.gd" type="Script" id=9]
[ext_resource path="res://characters/bosses/base/states/await.gd" type="Script" id=10]
[ext_resource path="res://effects/effect_spawner/EffectSpawner.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 10, 12 )

[sub_resource type="SpriteFrames" id=2]
resource_local_to_scene = true
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "dash",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterSprites/AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -256 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.55
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteEffect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.48 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteEffect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36, 0.4, 0.44, 0.48, 0.52 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true, false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CharacterSprites:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36, 0.4, 0.44, 0.48, 0.52 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true, false, true, false, true, false, true ]
}

[node name="BossBase" type="KinematicBody2D"]
z_index = 1
collision_layer = 4
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="CharacterSprites" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="CharacterSprites"]
position = Vector2( 0, -230.4 )
frames = SubResource( 2 )
animation = "idle"
offset = Vector2( 0, -4 )

[node name="SpriteEffect" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="AnimationBase" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/drop_in = SubResource( 3 )

[node name="AnimationHit" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 4 )

[node name="SFX" type="Node" parent="."]

[node name="Hit" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 5 )

[node name="Death" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 6 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 7 )
start_state = NodePath("Await")

[node name="Death" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Ready" type="Node" parent="StateMachine"]
pause_mode = 2
script = ExtResource( 9 )

[node name="Idle" type="Node" parent="StateMachine"]

[node name="Await" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="EffectSpawner" parent="." instance=ExtResource( 11 )]

[connection signal="animation_finished" from="AnimationHit" to="StateMachine" method="_on_animation_finished"]
